--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -12,5 +12,9 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
     instance:
-      instance-id: order80
       prefer-ip-address: true
+
+#某个服务的负载均衡配置
+cloud-payment-service:
+  ribbon:
+    NFloadBalanceRuleClassName: com.netflix.loadbalance.RandomRule
