--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -18,3 +18,5 @@ eureka:
 cloud-payment-service:
   ribbon:
     NFloadBalanceRuleClassName: com.netflix.loadbalance.RandomRule
+    ReadTimeout: 5000
+    ConnectTimeout: 5000 #超时控制
