--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <module>cloud-eureka-server7001</module>
       <module>cloud-eureks-server7002</module>
       <module>cloud-provider-payment8002</module>
+      <module>cloud-gateway-gateway9527</module>
+      <module>clud-config-center</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
